--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<h1>Welcome to My Website!</h1>
-<!-- Add an image of yourself that links to the about page -->
+<h1>All the Animals</h1>
+<h2>Rabbit:</h2>
 
-<hr />
-<!-- Add a link to your contact me page here -->
+<h2>Cat:</h2>
+
+<h2>Dog:</h2>
+
+<h2>Fish:</h2>
+
+<h2>Bird:</h2>
