--- a/practice of html.html
+++ b/practice of html.html
@@ -51,65 +51,9 @@ UK<br/>
 <ol>
     <li>mix the milk with the yeast, sugar, eggs</li>
     <li>melt the butter and add to the mixture</li>
-    <li> put the wet and dry ingredients together in one large bowl as one thing</li>
+    <li> put the wet and dry ingredients together in one large</li>
 </ol>
-
-<ul>
-    <li>A</li>
-    <li>B</li>
-        <ol>
-            <li>B1</li>
-            <li>B2</li>
-                <ul>
-                    <li>B2a</li>
-                        <ul>
-                            <li>B2aa</li>
-                            <li>B2ab</li>
-                        </ul>
-                    <li>B2b</li>
-                    <li>B2c</li>
-                </ul>
-            <li>B3</li>
-                <ol>
-                    <li>B31</li>
-                    <li>B32</li>
-                </ol>
-        </ol>
-    <li>C</li>
-</ul>
-
-<h1>My top 5 favorite Websites</h1>
-<ol start="5">
-    <li><a href="www.google.com">Product Hunt</a></li>
-    <li><a href="www.google.com">Smash the Walls</a></li>
-    <li><a href="www.google.com">Wordle</a></li>
-    <li><a href="www.google.com">Hacker Typer</a></li>
-    <li><a href="www.google.com">Stellarium</a></li>
-</ol>
-
-<h1>I am a Dog Person</h1>
-<img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2/10", alt="pictures of dogs"/>
-
-<h1>It's My Birthday!</h1>
-<h2>On the 12th of May</h2>
-<img src="https://images.unsplash.com/photo-1558301211-0d8c8ddee6ec?q=80&w=936&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="a birthday cake"/>
-<h3>What to bring:</h3>
-<ul>
-    <li>Balloons (I love balloons)</li>
-    <li>Cake (I'm really good at eating)</li>
-    <li>An appetite (there wwill be lots of food) </li>
-</ul>
-<h3>This is where you need to go:</h3>
-<a href="www.google.com">Goog map link</a>
-
 <h1>All the Animals</h1>
 <h2>Rabbit:</h2>
-<img src="./4.0 File Paths/Folder0/rabbit.png" alt="rabbit"/>
+<img src="Folder0/rabbit.png"/>
 <h2>Cat:</h2>
-<img src="./4.0 File Paths/Folder0/Folder3/cat.png" alt="cat"/>
-<h2>Dog:</h2>
-<img src="./4.0 File Paths/dog.png" alt="'dog"/>
-<h2>Fish:</h2>
-<img src="../Web development 2024/4.0 File Paths/Folder1/fish.png" alt="fish"/>
-<h2>Bird:</h2>
-<img src="../Web development 2024/4.0 File Paths/Folder1/Folder2/bird.png" alt="bird"/>
