--- a/solution.html
+++ b/solution.html
@@ -1,7 +1,16 @@
-<h1>Welcome to My Website!</h1>
-<!-- Add an image of yourself that links to the about page -->
-<a href="./public/about.html"><img src="./assets/images/cat.png" alt="cat" /></a>
-<hr />
+<h1>All the Animals</h1>
 
-<!-- Add a link to your contact me page here -->
-<a href="./public/contact.html">Contact Me</a>
+<h2>Rabbit:</h2>
+<img src="./rabbit.png" alt="rabbit" />
+
+<h2>Cat:</h2>
+<img src="./Folder3/cat.png" alt="cat" />
+
+<h2>Dog:</h2>
+<img src="../dog.png" alt="dog" />
+
+<h2>Fish:</h2>
+<img src="../Folder1/fish.png" alt="fish" />
+
+<h2>Bird:</h2>
+<img src="../Folder1/Folder2/bird.png" alt="bird" />
